<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SignUpActivity" >

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <RelativeLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <mq.org.smile.FontEditText
            android:singleLine="true"
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/username_hint" >

            <requestFocus />
        </mq.org.smile.FontEditText>

        <mq.org.smile.FontEditText
            android:singleLine="true"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/usernameField"
            android:layout_below="@+id/usernameField"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

        <mq.org.smile.FontEditText
            android:singleLine="true"
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordField"
            android:layout_below="@+id/passwordField"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />

        <mq.org.smile.FontButton
            android:id="@+id/signupButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/sign_up_button_label"
            android:layout_below="@+id/emailField"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />
        </RelativeLayout>
</RelativeLayout>