<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/background">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        ></include>

    <RelativeLayout
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <mq.org.smile.FontEditText
            android:singleLine="true"
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/username_hint" >

            <requestFocus />
        </mq.org.smile.FontEditText>

        <mq.org.smile.FontEditText
            android:singleLine="true"
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/usernameField"
            android:layout_below="@+id/usernameField"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <mq.org.smile.FontButton
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_button_label"
            android:textSize="30sp"
            android:layout_below="@+id/passwordField"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

        <mq.org.smile.FontTextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:textSize="30sp"
            android:text="@string/sign_up_text" />

        <mq.org.smile.FontTextView
            android:id="@+id/resetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signUpText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:text="Forgot password?" />

        </RelativeLayout>
</RelativeLayout>